# X-Robot

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  README  README.md  ReGex_Help.txt  Release.bat  Template.sln  X-Robot.sln  et --hard com  managerbuild.yml
.github/workflows/: MSBuild.yml  ManagerBuild.yml  README  msbuild.yml
Json/: BindID.json  Message.json  RobotInfo.json  op.json
Management/: BDS-zh_CN.bat  CMakeLists.txt  Management.cpp  Management.vcxproj  Management.vcxproj.filters  Manager.aps  Manager.rc  httplib.h  resource.h  start_go-cqhttp.bat
Management/BDS-Deamon/: BDS-Deamon.cmd
Management/Release/Manager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Manager.lastbuildstate
Management/nlohmann/: json.hpp
Management/yaml-cpp/Lib/: yaml-cpp.exp  yaml-cpp.lib
Release/: DeathMessages.exp  DeathMessages.lib
SDK/Header/MC/: VehicleUtils.hpp
Template/: CMakeLists.txt  Plugin.cpp  SysInfo.h  Template.vcxproj  Template.vcxproj.filters  dllmain.cpp  httplib.h  pch.h  version.h  yaml-cpp.lib
Template/openssl/: libcrypto-3-x64.lib  libssl-3-x64.lib
Template/openssl/include/openssl/: asn1.h  bio.h  cmp.h  configuration.h  crmf.h  pkcs12.h  ssl.h  x509.h
go-cqhttp/: config.yml  device.json  session.token
go-cqhttp/data/: image.db  video.db
go-cqhttp/data/leveldb-v3/: 000067.ldb  000124.ldb  000126.ldb  000128.ldb  000130.ldb  LOG  MANIFEST-000069
go-cqhttp/data/versions/: 6.json
go-cqhttp/data/voices/: 098D8A051E2AB03D6250A73302A69327.amr  3A4CA92AC5BAB456CC6E0758200590C9.amr  42174A11D6A51589AB83E133536DB4FA.amr  C82947FA2FF5DA0BE501B1A8DD8F6D54.amr  CD586B2F045958F65C15C8F6B2798BD9.amr
qsign/: start.bat
qsign/txlib/8.9.63/: .system_android_l2  config.json
qsign/txlib/8.9.68/: .system_android_l2  config.json
qsign/txlib/8.9.73/: .system_android_l2  config.json
websocketpp/DLLShare/: DLL.h
websocketpp/websocketpp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
